--- a/Server/MuchToDo/.env.example
+++ b/Server/MuchToDo/.env.example
@@ -12,8 +12,8 @@ SECURE_COOKIE=false
 
 
 # --- Database ---
-MONGO_URI=
-DB_NAME=much_todo_db
+MONGO_URI="mongodb+srv://peteroyelegbin_db_user:6paLFkwPqd8QonGK@much-todo-db.bc9wjdk.mongodb.net/?appName=much-todo-db"
+DB_NAME=much-todo-db
 
 # --- Authentication ---
 JWT_SECRET_KEY="your-super-secret-key-that-is-long-and-random"
