--- a/terraform/terraform.tfvars.example
+++ b/terraform/terraform.tfvars.example
@@ -1,11 +1,25 @@
 access_key = "YOUR_AWS_ACCESS_KEY_ID"
 secret_key = "YOUR_AWS_SECRET_ACCESS_KEY"
-project_name = "StartTech"
+project_name = "start-tech"
 region = "us-east-1"
+
+# VPC
 availability_zones = ["us-east-1a", "us-east-1b"]
 public_subnet_cidrs = ["10.0.1.0/24", "10.0.2.0/24"]
 private_subnet_cidrs = ["10.0.3.0/24", "10.0.4.0/24"]
+
+# Auto Scaling
 instance_type = "t3.micro"
 desired_capacity = 2
 max_size = 2
 min_size = 1
+
+# Redis
+redis_engine_version = "7.0"
+redis_node_type = "cache.t3.micro"
+redis_num_node_grps = 1
+redis_replicas_per_node_grp = 1
+redis_snapshot_retention_limit = 3
+redis_snapshot_window = "03:00-04:00"
+redis_maintenance_window = "sun:04:00-sun:05:00"
+redis_cloudwatch_retention_in_days = 3
