--- a/terraform/terraform.tfvars.example
+++ b/terraform/terraform.tfvars.example
@@ -1,6 +1,6 @@
 access_key = "YOUR_AWS_ACCESS_KEY_ID"
 secret_key = "YOUR_AWS_SECRET_ACCESS_KEY"
-project_name = "start-tech"
+project_name = "starttech"
 region = "us-east-1"
 
 # VPC
@@ -12,7 +12,7 @@ private_subnet_cidrs = ["10.0.3.0/24", "10.0.4.0/24"]
 instance_type = "t3.micro"
 desired_capacity = 2
 max_size = 2
-min_size = 1
+min_size = 2
 
 # Redis
 redis_engine_version = "7.0"
