--- a/Server/MuchToDo/.env.example
+++ b/Server/MuchToDo/.env.example
@@ -3,7 +3,7 @@ PORT=8080
 
 # --- CORS ---
 # Comma-separated list of allowed origins
-ALLOWED_ORIGINS="http://localhost:5173,http://localhost:3000"
+ALLOWED_ORIGINS="http://localhost:5173,http://localhost:3000,https://*.cloudfront.net"
 
 # --- Cookies ---
 # Comma-separated list of allowed cookie domains
@@ -12,7 +12,7 @@ SECURE_COOKIE=false
 
 
 # --- Database ---
-MONGO_URI="mongodb+srv://peteroyelegbin_db_user:6paLFkwPqd8QonGK@much-todo-db.bc9wjdk.mongodb.net/?appName=much-todo-db"
+MONGO_URI=
 DB_NAME=much-todo-db
 
 # --- Authentication ---
