--- a/.github/workflows/infrastructure-deploy.yml
+++ b/.github/workflows/infrastructure-deploy.yml
@@ -2,15 +2,13 @@ name: Infrastructure Deployment
 on:
   push:
     branches: [dev]
-    paths: ['terraform/**']
+    paths: 
+      - 'terraform/**'
+      - '.github/workflows/terraform-cicd.yml'
   pull_request:
     branches: [dev]
     paths: ['terraform/**']
   workflow_dispatch:
-
-env:
-  AWS_REGION: us-east-1
-  TF_VERSION: latest
 
 jobs:
   terraform-plan:
