--- a/.github/workflows/backend-ci-cd.yml
+++ b/.github/workflows/backend-ci-cd.yml
@@ -37,8 +37,9 @@ jobs:
       run: go mod download
 
     - name: Run linter
-      uses: golangci/golangci-lint-action@v3
+      uses: golangci/golangci-lint-action@v6
       with:
+        working-directory: ./Server/MuchToDo
         version: latest
 
     - name: Run unit tests
