--- a/.github/workflows/backend-ci-cd.yml
+++ b/.github/workflows/backend-ci-cd.yml
@@ -1,4 +1,5 @@
-name: Backend CI/CD
+name: Backend CI/CD Pipeline
+
 on:
   push:
     branches: [main, stagging]
@@ -11,153 +12,70 @@ on:
   workflow_dispatch:
 
 env:
-  DOCKER_REPOSITORY: starttech-backend
-  IMAGE_TAG: ${{ github.sha }}
+  GO_VERSION: "1.22"
 
 jobs:
-  test:
+  test-and-scan:
+    name: Test, Lint & Scan
     runs-on: ubuntu-latest
-    defaults:
-      run:
-        working-directory: ./Server/MuchToDo
-
-    strategy:
-      matrix:
-        go-version: [1.25.x]
 
     steps:
-    - uses: actions/checkout@v3
+      - name: Checkout source
+        uses: actions/checkout@v4
 
-    - name: Set up Go
-      uses: actions/setup-go@v4
-      with:
-        go-version: ${{ matrix.go-version }}
-        cache: true
-        cache-dependency-path: Server/MuchToDo/go.sum
+      - name: Set up Go
+        uses: actions/setup-go@v5
+        with:
+          go-version: ${{ env.GO_VERSION }}
+          cache: true
+          cache-dependency-path: Server/MuchToDo/go.sum
 
-    - name: Install dependencies
-      run: go mod download
+      - name: Download dependencies
+        run: go mod download
 
-    - name: Run linter
-      uses: golangci/golangci-lint-action@v6
-      with:
-        working-directory: ./Server/MuchToDo
-        version: v1.64.8
+      # --------------------
+      # Code Quality Checks
+      # --------------------
+      - name: Run golangci-lint
+        uses: golangci/golangci-lint-action@v6
+        with:
+          version: latest
+          args: --timeout=5m
 
-    - name: Run unit tests
-      run: go test -v -race ./... -coverprofile=coverage.out
+      # --------------------
+      # Unit Tests
+      # --------------------
+      - name: Run unit tests
+        run: |
+          go test ./... -short -race -coverprofile=coverage.out
 
-    - name: Generate coverage report
-      run: go tool cover -html=coverage.out -o coverage.html
+      # --------------------
+      # Integration Tests
+      # --------------------
+      - name: Run integration tests
+        run: |
+          go test ./... -tags=integration -race
+        env:
+          # Example: database or external services
+          DB_HOST: localhost
+          DB_PORT: 5432
 
-    - name: Upload test results
-      uses: actions/upload-artifact@v4
-      if: always()
-      with:
-        name: test-results
-        path: |
-          Server/MuchToDo/coverage.out
-          Server/MuchToDo/coverage.html
+      # --------------------
+      # Vulnerability Scan
+      # --------------------
+      - name: Install govulncheck
+        run: |
+          go install golang.org/x/vuln/cmd/govulncheck@latest
 
-    - name: Run security scan
-      uses: securego/gosec@v2.19.0
-      with:
-        args: ./...
-        working-directory: ./Server/MuchToDo
+      - name: Run vulnerability scan
+        run: |
+          govulncheck ./...
 
-
-  # build:
-  #   needs: test
-  #   if: github.ref == 'refs/heads/main' || github.event_name == 'workflow_dispatch'
-  #   runs-on: ubuntu-latest
-  #   defaults:
-  #     run:
-  #       working-directory: ./backend
-
-  #   steps:
-  #   - uses: actions/checkout@v3
-
-  #   - name: Configure AWS Credentials
-  #     uses: aws-actions/configure-aws-credentials@v2
-  #     with:
-  #       aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-  #       aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-  #       aws-region: ${{ env.AWS_REGION }}
-
-  #   - name: Login to Amazon ECR
-  #     id: login-ecr
-  #     uses: aws-actions/amazon-ecr-login@v1
-
-  #   - name: Build Docker image
-  #     run: |
-  #       docker build \
-  #         --build-arg BUILDKIT_INLINE_CACHE=1 \
-  #         -t ${{ steps.login-ecr.outputs.registry }}/${{ env.ECR_REPOSITORY }}:${{ env.IMAGE_TAG }} \
-  #         -t ${{ steps.login-ecr.outputs.registry }}/${{ env.ECR_REPOSITORY }}:latest \
-  #         .
-
-  #   - name: Scan Docker image
-  #     uses: aquasecurity/trivy-action@master
-  #     with:
-  #       image-ref: '${{ steps.login-ecr.outputs.registry }}/${{ env.ECR_REPOSITORY }}:${{ env.IMAGE_TAG }}'
-  #       format: 'sarif'
-  #       output: 'trivy-results.sarif'
-
-  #   - name: Upload Trivy scan results
-  #     uses: github/codeql-action/upload-sarif@v2
-  #     if: always()
-  #     with:
-  #       sarif_file: 'trivy-results.sarif'
-
-  #   - name: Push Docker image
-  #     if: success()
-  #     run: |
-  #       docker push ${{ steps.login-ecr.outputs.registry }}/${{ env.ECR_REPOSITORY }}:${{ env.IMAGE_TAG }}
-  #       docker push ${{ steps.login-ecr.outputs.registry }}/${{ env.ECR_REPOSITORY }}:latest
-
-  # deploy:
-  #   needs: build
-  #   if: github.ref == 'refs/heads/main'
-  #   runs-on: ubuntu-latest
-
-  #   steps:
-  #   - name: Configure AWS Credentials
-  #     uses: aws-actions/configure-aws-credentials@v2
-  #     with:
-  #       aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-  #       aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-  #       aws-region: ${{ env.AWS_REGION }}
-
-  #   - name: Update launch template
-  #     run: |
-  #       LATEST_LT_VERSION=$(aws ec2 describe-launch-template-versions \
-  #         --launch-template-id ${{ secrets.LAUNCH_TEMPLATE_ID }} \
-  #         --query 'LaunchTemplateVersions[0].VersionNumber' \
-  #         --output text)
-
-  #       aws ec2 create-launch-template-version \
-  #         --launch-template-id ${{ secrets.LAUNCH_TEMPLATE_ID }} \
-  #         --source-version $LATEST_LT_VERSION \
-  #         --version-description "Deploy ${{ env.IMAGE_TAG }}" \
-  #         --launch-template-data "{\"UserData\":\"$(base64 -w0 backend/userdata.sh)\"}"
-
-  #   - name: Start instance refresh
-  #     run: |
-  #       aws autoscaling start-instance-refresh \
-  #         --auto-scaling-group-name ${{ secrets.ASG_NAME }} \
-  #         --strategy Rolling \
-  #         --preferences '{"InstanceWarmup": 300, "MinHealthyPercentage": 90}'
-
-  #   - name: Run smoke tests
-  #     run: |
-  #       ./scripts/health-check.sh ${{ secrets.ALB_DNS_NAME }}
-
-  #   - name: Notify deployment
-  #     if: success()
-  #     uses: rtCamp/action-slack-notify@v2
-  #     env:
-  #       SLACK_WEBHOOK: ${{ secrets.SLACK_WEBHOOK }}
-  #       SLACK_CHANNEL: deployments
-  #       SLACK_COLOR: good
-  #       SLACK_TITLE: "Backend Deployed Successfully"
-  #       SLACK_MESSAGE: "Backend version ${{ env.IMAGE_TAG }} deployed to production"
+      # --------------------
+      # Upload Coverage (optional)
+      # --------------------
+      - name: Upload coverage artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: go-coverage
+          path: coverage.out
