update backend pipeline

--- a/.github/workflows/backend-ci-cd.yml
+++ b/.github/workflows/backend-ci-cd.yml
@@ -18,6 +18,9 @@ jobs:
   test-and-scan:
     name: Test, Lint & Scan
     runs-on: ubuntu-latest
+    defaults:
+      run:
+        working-directory: ./Server/MuchToDo
 
     steps:
       - name: Checkout source
