update backend pipeline

--- a/.github/workflows/backend-ci-cd.yml
+++ b/.github/workflows/backend-ci-cd.yml
@@ -44,6 +44,7 @@ jobs:
         with:
           version: latest
           args: --timeout=5m
+          working-directory: Server/MuchToDo
 
       # --------------------
       # Unit Tests
