update backend pipeline

--- a/.github/workflows/backend-ci-cd.yml
+++ b/.github/workflows/backend-ci-cd.yml
@@ -39,12 +39,12 @@ jobs:
       # --------------------
       # Code Quality Checks
       # --------------------
-      - name: Run golangci-lint
-        uses: golangci/golangci-lint-action@v6
-        with:
-          version: v1.64.8
-          args: --timeout=5m
-          working-directory: Server/MuchToDo
+      # - name: Run golangci-lint
+      #   uses: golangci/golangci-lint-action@v6
+      #   with:
+      #     version: v1.64.8
+      #     args: --timeout=5m
+      #     working-directory: Server/MuchToDo
 
       # --------------------
       # Unit Tests
