--- a/.github/workflows/backend-ci-cd.yml
+++ b/.github/workflows/backend-ci-cd.yml
@@ -13,7 +13,7 @@ on:
 
 env:
   GO_VERSION: "1.22"
-  GOTOOLCHAIN: auto
+  # GOTOOLCHAIN: auto
 
 jobs:
   test-and-scan:
@@ -51,8 +51,8 @@ jobs:
       # Unit Tests
       # --------------------
       - name: Run unit tests
-        # env:
-        #   GOTOOLCHAIN: auto
+        env:
+          GOTOOLCHAIN: auto
         run: |
           go test ./... -short -race -covermode=atomic -coverprofile=coverage.out
 
