--- a/.github/workflows/backend-ci-cd.yml
+++ b/.github/workflows/backend-ci-cd.yml
@@ -12,7 +12,7 @@ on:
   workflow_dispatch:
 
 env:
-  GO_VERSION: "1.22"
+  GO_VERSION: "1.25.1"
   GOTOOLCHAIN: auto
 
 jobs:
@@ -37,9 +37,7 @@ jobs:
       - name: Download dependencies
         run: go mod download
 
-      # --------------------
-      # Code Quality Checks
-      # --------------------
+      # # Code Quality Checks
       # - name: Run golangci-lint
       #   uses: golangci/golangci-lint-action@v6
       #   with:
