--- a/.github/workflows/frontend-ci-cd.yml
+++ b/.github/workflows/frontend-ci-cd.yml
@@ -1,8 +1,11 @@
-name: Frontend CI/CD
+name: Frontend CI/CD Pipeline
+
 on:
   push:
-    branches: [dev, stagging]
-    paths: ['Client/**']
+    branches: [main, stagging]
+    paths:
+      - 'Client/**'
+      - '.github/workflows/frontend-ci-cd.yml'
   pull_request:
     branches: [dev]
     paths: ['Client/**']
@@ -10,137 +13,140 @@ on:
 
 env:
   AWS_REGION: us-east-1
-  S3_BUCKET: start-tech-frontend-bkt
-  CLOUDFRONT_DISTRIBUTION: ${{ secrets.CLOUDFRONT_DISTRIBUTION_ID }}
+  S3_BUCKET: starttech-frontend-bkt
+  # CLOUDFRONT_DISTRIBUTION: ${{ secrets.CLOUDFRONT_DISTRIBUTION_ID }}
 
 jobs:
+  # Test pipeline
   test:
+    name: Test, Lint & Scan
     runs-on: ubuntu-latest
     defaults:
       run:
-        working-directory: ./frontend
+        working-directory: ./Client
 
     strategy:
       matrix:
         node-version: [20.x]
 
     steps:
-    - uses: actions/checkout@v3
+      - name: Checkout source
+        uses: actions/checkout@v4
 
-    - name: Use Node.js ${{ matrix.node-version }}
-      uses: actions/setup-node@v3
-      with:
-        node-version: ${{ matrix.node-version }}
-        cache: 'npm'
-        cache-dependency-path: '**/package-lock.json'
+      - name: Use Node.js ${{ matrix.node-version }}
+        uses: actions/setup-node@v3
+        with:
+          node-version: ${{ matrix.node-version }}
+          cache: 'npm'
+          cache-dependency-path: '**/package-lock.json'
 
-    - name: Install dependencies
-      run: npm ci
+      - name: Install dependencies
+        run: npm ci
 
-    - name: Run linter
-      run: npm run lint
+      - name: Run linter
+        run: npm run lint
 
-    - name: Run unit tests
-      run: npm test -- --coverage
+      - name: Run unit tests
+        run: npm test -- --coverage
 
-    - name: Upload coverage to Codecov
-      uses: codecov/codecov-action@v3
-      with:
-        directory: ./frontend/coverage
+      - name: Upload coverage to Codecov
+        uses: codecov/codecov-action@v3
+        with:
+          directory: ./Client/coverage
 
-    - name: Security audit
-      run: npm audit --audit-level=high
+      - name: Security audit
+        run: npm audit --audit-level=high
 
-    - name: Run OWASP dependency check
-      uses: dependency-check/Dependency-Check_Action@main
-      with:
-        project: 'starttech-frontend'
-        path: '.'
-        format: 'HTML'
-        args: >
-          --scan ./frontend
-          --out ./reports
+      - name: Run OWASP dependency check
+        uses: dependency-check/Dependency-Check_Action@main
+        with:
+          project: 'starttech-frontend'
+          path: '.'
+          format: 'HTML'
+          args: >
+            --scan ./Client
+            --out ./reports
 
-  build:
-    needs: test
-    if: github.ref == 'refs/heads/main' || github.event_name == 'workflow_dispatch'
-    runs-on: ubuntu-latest
-    defaults:
-      run:
-        working-directory: ./frontend
+  # build:
+  #   needs: test
+  #   if: github.ref == 'refs/heads/main' || github.event_name == 'workflow_dispatch'
+  #   runs-on: ubuntu-latest
+  #   defaults:
+  #     run:
+  #       working-directory: ./Client
 
-    steps:
-    - uses: actions/checkout@v3
+  #   steps:
+  #   - uses: actions/checkout@v3
 
-    - name: Use Node.js 18.x
-      uses: actions/setup-node@v3
-      with:
-        node-version: '18.x'
+  #   - name: Use Node.js 20.x
+  #     uses: actions/setup-node@v3
+  #     with:
+  #       node-version: '20.x'
 
-    - name: Install dependencies
-      run: npm ci
+  #   - name: Install dependencies
+  #     run: npm ci
 
-    - name: Build application
-      run: npm run build
-      env:
-        REACT_APP_API_URL: ${{ secrets.REACT_APP_API_URL }}
-        REACT_APP_ENVIRONMENT: ${{ github.ref == 'refs/heads/main' && 'production' || 'staging' }}
+  #   - name: Build application
+  #     run: npm run build
+  #     env:
+  #       REACT_APP_API_URL: ${{ secrets.REACT_APP_API_URL }}
+  #       REACT_APP_ENVIRONMENT: ${{ github.ref == 'refs/heads/main' && 'production' || 'staging' }}
 
-    - name: Upload build artifact
-      uses: actions/upload-artifact@v3
-      with:
-        name: frontend-build
-        path: frontend/build
+  #   - name: Upload build artifact
+  #     uses: actions/upload-artifact@v3
+  #     with:
+  #       name: frontend-build
+  #       path: frontend/build
 
-  deploy:
-    needs: build
-    if: github.ref == 'refs/heads/main'
-    runs-on: ubuntu-latest
+  # deploy:
+  #   needs: build
+  #   if: github.ref == 'refs/heads/main'
+  #   runs-on: ubuntu-latest
 
-    steps:
-    - uses: actions/checkout@v3
+  #   steps:
+  #   - uses: actions/checkout@v3
 
-    - name: Download build artifact
-      uses: actions/download-artifact@v3
-      with:
-        name: frontend-build
-        path: dist
+  #   - name: Download build artifact
+  #     uses: actions/download-artifact@v3
+  #     with:
+  #       name: frontend-build
+  #       path: dist
 
-    - name: Configure AWS Credentials
-      uses: aws-actions/configure-aws-credentials@v2
-      with:
-        aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-        aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-        aws-region: ${{ env.AWS_REGION }}
+  #   - name: Configure AWS Credentials
+  #     uses: aws-actions/configure-aws-credentials@v2
+  #     with:
+  #       aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+  #       aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+  #       aws-region: ${{ env.AWS_REGION }}
 
-    - name: Deploy to S3
-      run: |
-        aws s3 sync ./dist s3://${{ env.S3_BUCKET }} \
-          --delete \
-          --cache-control "public, max-age=31536000" \
-          --exclude "*.html" \
-          --exclude "*.json" \
-          --exclude "*.xml"
+  #   - name: Deploy to S3
+  #     run: |
+  #       aws s3 sync ./dist s3://${{ env.S3_BUCKET }} \
+  #         --delete \
+  #         --cache-control "public, max-age=31536000" \
+  #         --exclude "*.html" \
+  #         --exclude "*.json" \
+  #         --exclude "*.xml"
 
-        aws s3 sync ./dist s3://${{ env.S3_BUCKET }} \
-          --delete \
-          --cache-control "public, max-age=0, must-revalidate" \
-          --include "*.html" \
-          --include "*.json" \
-          --include "*.xml"
+  #       aws s3 sync ./dist s3://${{ env.S3_BUCKET }} \
+  #         --delete \
+  #         --cache-control "public, max-age=0, must-revalidate" \
+  #         --include "*.html" \
+  #         --include "*.json" \
+  #         --include "*.xml"
 
-    - name: Invalidate CloudFront cache
-      run: |
-        aws cloudfront create-invalidation \
-          --distribution-id ${{ env.CLOUDFRONT_DISTRIBUTION }} \
-          --paths "/*"
+  #   - name: Invalidate CloudFront cache
+  #     run: |
+  #       aws cloudfront create-invalidation \
+  #         --distribution-id ${{ env.CLOUDFRONT_DISTRIBUTION }} \
+  #         --paths "/*"
 
-    - name: Notify deployment
-      if: success()
-      uses: rtCamp/action-slack-notify@v2
-      env:
-        SLACK_WEBHOOK: ${{ secrets.SLACK_WEBHOOK }}
-        SLACK_CHANNEL: deployments
-        SLACK_COLOR: good
-        SLACK_TITLE: "Frontend Deployed Successfully"
-        SLACK_MESSAGE: "Frontend deployed to ${{ env.S3_BUCKET }}"
+  #   - name: Notify deployment
+  #     if: success()
+  #     uses: rtCamp/action-slack-notify@v2
+  #     env:
+  #       SLACK_WEBHOOK: ${{ secrets.SLACK_WEBHOOK }}
+  #       SLACK_CHANNEL: deployments
+  #       SLACK_COLOR: good
+  #       SLACK_TITLE: "Frontend Deployed Successfully"
+  #       SLACK_MESSAGE: "Frontend deployed to ${{ env.S3_BUCKET }}"
