--- a/.github/workflows/infrastructure-deploy.yml
+++ b/.github/workflows/infrastructure-deploy.yml
@@ -2,7 +2,7 @@ name: Infrastructure Deployment
 
 on:
   push:
-    branches: [main, stagging]
+    branches: [dev, staging]
     paths: 
       - 'terraform/**'
       - '.github/workflows/infrastructure-deploy.yml'
@@ -12,8 +12,6 @@ on:
   workflow_dispatch:
 
 env:
-  TF_VAR_access_key: ${{ secrets.AWS_ACCESS_KEY_ID }}
-  TF_VAR_secret_key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
   TF_VAR_region: ${{ vars.AWS_REGION }}
   TF_VAR_project_name: ${{ vars.PROJECT_NAME }}
   TF_VAR_availability_zones: ${{ vars.AWS_AVAILABILITY_ZONE }}
@@ -69,7 +67,7 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: tfplan
-          path: terraform/tfplan
+          path: tfplan
 
   terraform-apply:
     needs: terraform-plan
