--- a/.github/workflows/frontend-ci-cd.yml
+++ b/.github/workflows/frontend-ci-cd.yml
@@ -100,7 +100,7 @@ jobs:
           path: Client/dist
 
 
-  # Build pipeline
+  # Deploy pipeline
   deploy:
     needs: build
     if: github.ref == 'refs/heads/main'
