--- a/.github/workflows/infrastructure-deploy.yml
+++ b/.github/workflows/infrastructure-deploy.yml
@@ -136,6 +136,23 @@ jobs:
       - name: Output Terraform Data
         run: terraform output -json > outputs.json
 
+      - name: Verify Terraform Outputs
+        run: |
+          echo "Current directory contents:"
+          ls -la
+
+          echo "Generated terraform_outputs.json:"
+          ls -la terraform_outputs.json
+          echo "Content preview:"
+          head -c 500 terraform_outputs.json
+          echo ""
+          
+          # Validate JSON
+          if ! python3 -c "import json; json.load(open('terraform_outputs.json'))"; then
+            echo "ERROR: Invalid JSON in terraform_outputs.json"
+            exit 1
+          fi
+
       - name: Install Python dependencies
         run: pip3 install pynacl
 
@@ -143,6 +160,7 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           GITHUB_REPOSITORY: ${{ github.repository }}
+        working-directory: ./terraform
         run: |
           python3 scripts/update_env_vars.py
 
